client/src/components/navbar/navbar.css
.navbar {
	@apply flex relative justify-between bg-[#ff9617] text-white h-14;
}

.navbrand {
	@apply pl-0 lg:pl-10 float-left flex flex-row justify-items-start items-center;
}

.navbrand h1 {
	@apply pl-2 text-black text-2xl font-bold;
}

.navbar-img-link {
	@apply mx-0;
}

.navbar-brand-img {
	@apply w-10 h-10 ml-10 rounded-full;
}

.navbar-nav {
	@apply flex max-w-full h-full mr-4 lg:mr-20;
}

.navbar-nav ul {
	@apply w-full h-full flex justify-start items-center list-none mr-3 p-0;
}

.responsive {
	@apply w-48 min-h-screen z-30 pt-20 mr-0 bg-black;
}

.responsive-lists {
	@apply flex-col justify-start items-start;
}

.responsive-link {
	@apply text-white;
}

.responsive-item {
	@apply mb-12;
}

.responsive-btn {
	@apply justify-center items-center right-4 absolute cursor-pointer z-40 rounded hover:bg-[#be7200] ease-in-out duration-300;
}

.navbar-item {
	@apply flex w-40 lg:w-40 md:w-32 py-3.5 lg:py-3 justify-center items-center font-bold hover:bg-[#be7200] hover:cursor-pointer;
}

.navbar-link {
	@apply text-white md:text-[#212121] text-2xl md:text-xl lg:text-2xl text-center md:ease-in-out md:duration-300  group-hover:text-white;
}

.dropdown {
	@apply w-full flex justify-center;
}

.dropdown-content {
	@apply hidden absolute w-40 lg:w-40 md:w-32 shadow-lg bg-white shadow-black z-20 translate-y-11 md:top-14 md:translate-y-0 lg:top-14 group-hover:block;
}

.dropdown-link {
	@apply block text-[#212121] text-xl md:text-lg lg:text-xl py-2 text-center ease-in-out duration-300 hover:text-white hover:bg-[#535353];
}

